--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,119 @@ nav a {
   font-weight: 600;
   text-decoration: none;
 }
+
+/* About Section */
+
+.profile {
+  display: flex;
+}
+
+.about {
+  width: 60%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.about h3 {
+  padding-bottom: 10px;
+}
+.about img {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  padding: 20px 0;
+}
+
+p {
+  display: inline-block;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.about-disc {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+  align-content: center;
+}
+
+
+
+/* styles for tablets */
+
+@media screen and (max-width: 992px) {
+  header {
+      display: block;
+  }
+  
+  header a {
+      display: block;
+      float: none;
+      text-align: center;
+      padding: 10px;
+  }
+
+  nav {
+      float: none;
+      text-align: center;
+
+  }
+
+  .about {
+      width: 75%;
+  }
+
+  .about img {
+      height: auto;
+      display: flex;
+      justify-self: center;
+
+  }
+
+  .profile {
+      display: block;
+  }
+
+  .profile img {
+      height: auto;
+      margin: 0 auto;
+  }
+
+}
+
+/* Styles for Mobile */
+
+@media screen and (max-width: 688px) {
+  header a {
+      padding: 5px;
+  }
+
+  .about {
+      width: 90%;
+      margin: 0 auto;
+  }
+
+  .work-box {
+      width: 90%;
+  }
+
+
+  .project {
+      width: 100%;
+      margin: 10px 0;
+  }
+
+  .sub-projects {
+      display: block;
+  }
+
+  .sub-projects .project {
+      width: 100%;
+  }
+
+  .contact {
+      width: 90%;
+  }
+}
