--- a/src/App.css
+++ b/src/App.css
@@ -190,3 +190,14 @@ p {
       width: 90%;
   }
 }
+
+header {
+  margin-bottom: 50px;
+}
+
+footer {
+  margin-top: 50px;
+  border-top: 1px solid darkgray;
+  padding: 10px;
+  text-align: center;
+}
