make footer stick to bottom, add resume download, add background image photo for later

--- a/src/App.css
+++ b/src/App.css
@@ -195,9 +195,20 @@ header {
   margin-bottom: 50px;
 }
 
+
+.hello {
+    min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;  
+}
+
 footer {
-  margin-top: 50px;
+  bottom: 0;
+  width: 100%;
   border-top: 1px solid darkgray;
   padding: 10px;
   text-align: center;
 }
+
