--- a/src/App.css
+++ b/src/App.css
@@ -210,5 +210,10 @@ footer {
   border-top: 1px solid darkgray;
   padding: 10px;
   text-align: center;
+  margin-top: 50px;
 }
 
+.form-control {
+  padding: 10px 12px;
+  margin: 10px 0 30px 0;
+}
