--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: aliceblue;
 }
 
 nav a {
@@ -17,6 +16,13 @@ nav a {
 
 .profile {
   display: flex;
+  background-color: aliceblue;
+  padding: 50px;
+}
+
+.div-resume {
+  background-color: aliceblue;
+  padding: 25px;
 }
 
 .about {
@@ -192,12 +198,24 @@ p {
 }
 
 header {
-  margin-bottom: 50px;
+  background-color: aliceblue;
+  align-items: center;
+  width: 100%;
+
+
 }
 
 
 .hello {
-    min-height: 100vh;
+  padding: 20px;
+}
+
+.jelly {
+  min-height: 100vh;
+  background-image: url("../src/assets/images/jelly-fish-pexels-nidhi-shah-3616252.jpg");
+  background-size: cover;
+  min-width: 100%;
+  background-attachment: fixed;
 }
 
 .content-wrap {
@@ -205,15 +223,49 @@ header {
 }
 
 footer {
-  bottom: 0;
   width: 100%;
   border-top: 1px solid darkgray;
   padding: 10px;
   text-align: center;
-  margin-top: 50px;
+  background-color: aliceblue;
 }
 
 .form-control {
   padding: 10px 12px;
   margin: 10px 0 30px 0;
+}
+
+.card {
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.btn {
+  margin-top: 20px;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+.logo {
+  margin: 10px;
+}
+
+header a {
+  text-decoration: none;
+  color: black;
+}
+
+header a:hover {
+  color: gray;
+}
+
+.icon {
+  margin: 0 5px 5px;
+}
+
+.form-div {
+  background-color: aliceblue;
+  padding: 25px;
 }
