--- a/src/App.css
+++ b/src/App.css
@@ -119,82 +119,7 @@ p {
 }
 
 
-/* styles for tablets */
 
-@media screen and (max-width: 992px) {
-  header {
-      display: block;
-  }
-  
-  header a {
-      display: block;
-      float: none;
-      text-align: center;
-      padding: 10px;
-  }
-
-  nav {
-      float: none;
-      text-align: center;
-
-  }
-
-  .about {
-      width: 75%;
-  }
-
-  .about img {
-      height: auto;
-      display: flex;
-      justify-self: center;
-
-  }
-
-  .profile {
-      display: block;
-  }
-
-  .profile img {
-      height: auto;
-      margin: 0 auto;
-  }
-
-}
-
-/* Styles for Mobile */
-
-@media screen and (max-width: 688px) {
-  header a {
-      padding: 5px;
-  }
-
-  .about {
-      width: 90%;
-      margin: 0 auto;
-  }
-
-  .work-box {
-      width: 90%;
-  }
-
-
-  .project {
-      width: 100%;
-      margin: 10px 0;
-  }
-
-  .sub-projects {
-      display: block;
-  }
-
-  .sub-projects .project {
-      width: 100%;
-  }
-
-  .contact {
-      width: 90%;
-  }
-}
 
 /* use z index so content does't scroll over header*/
 header {
@@ -216,6 +141,7 @@ header {
   background-size: cover;
   min-width: 100%;
   background-attachment: fixed;
+  padding: 20px;
 }
 
 .content-wrap {
@@ -255,6 +181,7 @@ h2 {
 header a {
   text-decoration: none;
   color: black;
+  /* text-align: center; */
 }
 
 header a:hover {
@@ -271,5 +198,130 @@ header a:hover {
 }
 
 section {
-  margin-top: 120px;
+  margin-top: 150px;
+}
+
+.box {
+  background-color: aliceblue;
+  width: 50%;
+  max-width: 500px;
+
+}
+
+.circle {
+  border-radius: 50%;
+  padding: 30px;
+ width: 100%;
+ height: 100%;
+  object-fit: cover;
+}
+
+/* styles for tablets */
+
+@media screen and (max-width: 992px) {
+  header {
+      display: block;
+  }
+  
+  header a {
+      display: block;
+      float: none;
+      text-align: center;
+      padding: 10px;
+  }
+
+  nav {
+      text-align: center;
+
+  }
+
+  .about {
+      width: 100%;
+  }
+
+  .about img {
+      height: auto;
+      display: flex;
+      justify-self: center;
+
+  }
+
+  .profile {
+      display: block;
+  }
+
+  .profile img {
+      height: auto;
+      margin: 0 auto 0 auto;
+      
+  }
+
+  .box {
+    width: 70%;
+  }
+
+}
+
+/* Styles for Mobile */
+
+@media screen and (max-width: 688px) {
+  header a {
+      padding: 5px;
+  }
+
+  .about {
+      width: 100%;
+      margin: 0 auto;
+  }
+
+  .work-box {
+      width: 90%;
+  }
+
+  .project {
+      width: 100%;
+      margin: 10px 0;
+  }
+
+  .sub-projects {
+      display: block;
+  }
+
+  .sub-projects .project {
+      width: 100%;
+  }
+
+  .contact {
+      width: 90%;
+  }
+
+  .profile {
+    padding: 20px;
+  }
+
+  .box {
+    width: 90%;
+  }
+}
+
+/*unique breakpoint fixes*/
+@media screen and (max-width: 424px){
+  section {
+    margin-top: 288px;
+  }
+
+  .about-disc {
+    padding: 5px 2px 20px;
+  }
+
+}
+
+@media screen and (max-width: 320px ) {
+  section {
+    margin-top: 288px;
+  }
+
+  .box {
+    width: 95%;
+  }
 }
